p021 欢迎页 广告页

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload'
+include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload', ':p021_welcome'
 //libs start
 
 include ':librararyforfileprovdider'
