--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload', ':p021_welcome'
+include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload', ':p021_welcome', ':p022_jincheng_baohuo'
 //libs start
 
 include ':librararyforfileprovdider'
