--- a/settings.gradle
+++ b/settings.gradle
@@ -29,7 +29,7 @@ include ':p009_flowlayout'
 include ':p020_timer'
 include ':p010_location'
 include ':p011_lifecycle'
-include ':p012_interpolator'
+include ':p012_interpolator_addshoppingcar'
 include ':p013_updatemanagerpermission'
 include ':p014_systemvoices'
 include ':p001_fitandroid678'
