--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload', ':p021_welcome', ':p022_jincheng_baohuo', ':p023_zhifubao_num_change', ':p024_shimmerlayout', ':p025_news_gundongall'
+include ':app', ':p019_shibie_qrcode', ':p001_fitandroid_touxiang_upload', ':p021_welcome', ':p022_jincheng_baohuo', ':p023_zhifubao_num_change', ':p024_shimmerlayout', ':p025_news_gundongall', ':libglide38'
 //libs start
 
 include ':librararyforfileprovdider'
